--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "@tori/autocomplete",
   "version": "1.0.0",
   "description": "Loosely-coupled autocompletion library",
-  "main": "autocomplete.mjs",
+  "main": "umd/index.js",
+  "module": "esm/index.js",
+  "files": [
+    "esm/*",
+    "emd/*"
+  ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "rollup --config"
   },
   "repository": {
     "type": "git",
@@ -17,6 +23,8 @@
   },
   "homepage": "https://github.com/t0ri/autocomplete#readme",
   "devDependencies": {
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "rollup": "^2.9.1",
+    "rollup-plugin-terser": "^5.3.0"
   }
 }
