--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tori/autocomplete",
+  "name": "@t0ri/autocomplete",
   "version": "1.0.0",
   "description": "Loosely-coupled autocompletion library",
   "main": "umd/index.js",
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "test": "jest",
-    "prepare": "rollup --config"
+    "prepare": "rollup --config",
+    "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/t0ri/autocomplete#readme",
   "devDependencies": {
+    "coveralls": "^3.1.0",
     "jest": "^26.0.1",
     "rollup": "^2.9.1",
     "rollup-plugin-terser": "^5.3.0"
